styles/styles.css
/* ... */
  form input::placeholder,
  form textarea::placeholder {
    font-size: 0.8rem; }
  form input[type=text], form input[type=email] {
    margin-bottom: 3%; }
  form textarea {
    margin-bottom: 5.5%; }
  form button {
    width: 100%;
    margin: 0 auto 2.75% auto;
    -webkit-box-shadow: 0 2px 2px rgba(168, 168, 168, 0.6);
    box-shadow: 0 2px 2px rgba(168, 168, 168, 0.6); }

.contact_icons {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center; }
  .contact_icons .contact_link {
    display: inline-block;
    margin-right: 4%;
    margin-bottom: 0; }
  .contact_icons i {
    font-size: 1.15rem;
    -webkit-transition: color 0.25s;
    -o-transition: color 0.25s;
    transition: color 0.25s; }
  .contact_icons i:hover {
    color: #ff4757; }
  .contact_icons p {
    margin: 0;
    display: none; }

.contact_container {
  -ms-flex-preferred-size: 180px;
  flex-basis: 180px; }

@media (min-width: 414px) {
  .contact form button {
    width: 225px; } }

@media (min-width: 709px) {
  .contact form button {
    width: 400px; }
  .contact .contact_container {
    -ms-flex-preferred-size: 202px;
    flex-basis: 202px; } }

@media (min-width: 1023px) {
  .contact .contact_container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    text-align: left;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%; }
  .contact_icons {
    margin-top: 7.5%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    height: calc(100% - 22.5px); }
    .contact_icons .contact_link {
      margin-bottom: 5%;
      display: inline-block;
      cursor: pointer;
      -webkit-transition: color 0.25s;
      -o-transition: color 0.25s;
      transition: color 0.25s;
      width: 100%; }
    .contact_icons .contact_link:hover {
      color: #ff4757; }
  form {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between; }
    form .contact_icons p {
      padding-left: 0.75rem;
      display: inline-block;
      font-size: 0.7rem;
      letter-spacing: 0.05rem; }
    form .contact_twitter p {
      padding-left: 0.625rem; }
  .contact form button {
    width: 35%;
    margin: 0; }
  .form_top {
    -ms-flex-preferred-size: 67%;
    flex-basis: 67%; }
    .form_top label, .form_top input {
      max-width: 100%; }
  .form_bottom {
    -ms-flex-preferred-size: 28%;
    flex-basis: 28%;
    text-align: left; } }

footer {
  background: #000;
  margin-top: 18%;
  padding: 1% 0;
  text-align: center; }
  footer p {
    font-size: 0.6rem;
    color: #fff;
    margin: 0; }

@media (min-width: 709px) {
  footer {
    margin-top: 13.5%; } }

@media (min-width: 1023px) {
  footer {
    margin-top: 9%; } }

#thanks h2 {
  color: #fff; }

#thanks .link_home {
  position: relative;
  z-index: 20;
  -webkit-transition: color 0.25s, border 0.25s;
  -o-transition: color 0.25s, border 0.25s;
  transition: color 0.25s, border 0.25s; }

#thanks .link_home:hover .back {
  color: #ff4757; }

#thanks .link_home:hover .back_text {
  border-bottom: 1px solid #ff4757; }

#thanks .back {
  margin-right: 1.25%; }

#thanks .back_text {
  padding-bottom: 0.125rem;
  border-bottom: 1px solid transparent; }

.thanks_fullbleed {
  margin-top: 8vh;
  height: 88vh;
  margin-bottom: 4vh;
  background-image: url("../assets/ales-nesetril-734016-unsplash.jpg");
  background-size: cover;
  background-position-x: 45%;
  background-position-y: 10vh; }

.thanks_fullbleed::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
  z-index: 10;
  background: rgba(158, 156, 156, 0.2); }

.thanks_container {
  padding-top: 5vh;
  text-align: center; }

@media (min-width: 970px) {
  .thanks_fullbleed {
    background-position-y: -15vh; } }

/*# sourceMappingURL=styles.css.map */

